--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,7 +8,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Manrope", sans-serif;
+  font-family: "Comfortaa", sans-serif;
+  
+}
+
+.category-page-container ~ .footer {
+  display: none;
 }
 
 /* START: General styles */
@@ -43,7 +48,7 @@
 }
 
 .product__title {
-  @apply 2xl:text-[64px] sm:text-[46px] text-[50px] font-extrabold;
+  @apply 2xl:text-[54px] sm:text-[36px] text-[0px] font-extrabold;
 }
 
 .product__subtitle {
@@ -86,65 +91,58 @@
 }
 /* END: Home styles */
 
-/* START: Car Card styles */
-.car-card {
-  @apply flex flex-col p-6 justify-center items-start text-black-100 bg-primary-blue-100 hover:bg-white hover:shadow-md rounded-3xl;
-}
+/* START: Product Card styles */
+.product-card {
+  @apply flex flex-col p-6 justify-center items-start text-black-100 bg-zinc-100 hover:bg-white hover:shadow-xl rounded-3xl;
+} 
 
-.car-card__content {
+.product-productd__content {
   @apply w-full flex justify-between items-start gap-2;
 }
 
-.car-card__content-title {
-  @apply text-[22px] leading-[26px] font-bold capitalize;
+.product-card__content-title {
+  @apply text-[12px] leading-[16px] font-bold capitalize;
 }
 
-.car-card__price {
-  @apply flex mt-6 text-[32px] leading-[38px] font-extrabold;
+.product-card__price {
+  @apply flex mt-6 text-[16px] leading-[18px] font-extrabold;
 }
 
-.car-card__price-dollar {
-  @apply self-start text-[14px] leading-[17px] font-semibold;
+.product-card__image {
+  @apply relative w-full h-40 my-3 object-contain ;
 }
 
-.car-card__price-day {
-  @apply self-end text-[14px] leading-[17px] font-medium;
-}
-
-.car-card__image {
-  @apply relative w-full h-40 my-3 object-contain;
-}
-
-.car-card__icon-container {
+.product-card__icon-container {
   @apply flex group-hover:invisible w-full justify-between text-grey;
 }
 
-.car-card__icon {
+.product-card__icon {
   @apply flex flex-col justify-center items-center gap-2;
 }
 
-.car-card__icon-text {
+.product-card__icon-text {
   @apply text-[14px] leading-[17px];
 }
 
-.car-card__btn-container {
+.product-card__btn-container {
   @apply hidden group-hover:flex absolute bottom-0 w-full z-10;
 }
-/* END: Car Card styles */
+/* END: Product Card styles */
 
-/* START: Car Details styles */
-.car-details__dialog-panel {
+/* START: Product Details styles */
+.product-details__dialog-panel {
   @apply relative w-full max-w-lg max-h-[90vh] overflow-y-auto transform rounded-2xl bg-white p-6 text-left shadow-xl transition-all flex flex-col gap-5;
 }
 
-.car-details__close-btn {
+.product-details__close-btn {
   @apply absolute top-2 right-2 z-10 w-fit p-2 bg-primary-blue-100 rounded-full;
 }
 
-.car-details__main-image {
+.product-details__main-image {
   @apply relative w-full h-40 bg-pattern bg-cover bg-center rounded-lg;
 }
-/* END: Car Details styles */
+
+/* END: Product Details styles */
 
 /* START: Custom Filter styles */
 .custom-filter__btn {
@@ -303,7 +301,7 @@
 }
 
 .green_gradient {
-  @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-green-400 to-green-700 bg-clip-text text-transparent;
 }
 
 .blue_gradient {
