--- a/app/globals.css
+++ b/app/globals.css
@@ -66,9 +66,9 @@
   @apply relative xl:w-full w-[100%] xl:h-full h-[500px] z-0;
 }
 
-.product__image-overlay {
+/* .product__image-overlay {
   @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[500px] overflow-hidden;
-}
+} */
 /* END: product styles */
 
 /* START: Home styles */
